--- a/INFERE_ON_VIDEO.ipynb
+++ b/INFERE_ON_VIDEO.ipynb
@@ -97,24 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'boxes': tensor([], size=(0, 4)), 'labels': tensor([]), 'scores': tensor([])}"
+       "{'boxes': tensor([[622.2898, 144.5001, 693.1730, 211.2545]], device='cuda:0',\n",
+       "       grad_fn=<CopySlices>), 'labels': tensor([1], device='cuda:0'), 'scores': tensor([0.2509], device='cuda:0', grad_fn=<CatBackward>)}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# img = np.array(Image.open('../data/JapanHeads/val/18100.jpg').convert(\"RGB\"))\n",
-    "# img = cv2.imread('../data/JapanHeads/val/18100.jpg')\n",
-    "img = cv2.imread('../data/JapanHeads/without_annotation/10.jpg')\n",
+    "img = cv2.imread('../data/JapanHeads/val/18100.jpg')\n",
+    "# img = cv2.imread('../data/JapanHeads/without_annotation/10.jpg')\n",
     "height, width = img.shape[:2]\n",
     "images = transforms(img[::,::,::-1])[0].unsqueeze(0)\n",
     "result = model(images.to(device))[0]\n",
@@ -124,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " BOXES:  []\n",
-      " LABELS: []\n",
-      " SCORES: []\n",
+      " BOXES:  [[622 144 693 211]]\n",
+      " LABELS: [1]\n",
+      " SCORES: [0.25088254]\n",
       "\n"
      ]
     }
@@ -144,6 +145,137 @@
     "labels = result['labels'].cpu().detach().numpy()\n",
     "scores = result['scores'].cpu().detach().numpy()\n",
     "print(\" BOXES:  {}\\n LABELS: {}\\n SCORES: {}\\n\".format(boxes, labels, scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Measure speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from typing import Tuple\n",
+    "\n",
+    "\n",
+    "def one_inf_timeit(model, img):\n",
+    "    \"proper way to test pytorch speed\"\n",
+    "    torch.cuda.synchronize()\n",
+    "    model(img)\n",
+    "    torch.cuda.synchronize()\n",
+    "    \n",
+    "\n",
+    "def get_random_image(shape: Tuple[int, int, int]) -> 'np.ndarray':\n",
+    "    \"\"\" Generate image of random noise\n",
+    "\n",
+    "        :param shape: ``(height, width, channels_num)``\n",
+    "    \"\"\"\n",
+    "    img = (np.random.standard_normal(shape) * 255).astype(np.uint8)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# no heads\n",
+    "tmp = get_random_image((800, 800, 3))\n",
+    "# 4 heads\n",
+    "# tmp = cv2.imread('../data/JapanHeads/val/12660.jpg')\n",
+    "# 3 heads\n",
+    "# tmp = cv2.imread('../data/JapanHeads/val/11810.jpg')\n",
+    "# 2 heads\n",
+    "# tmp = cv2.imread('../data/JapanHeads/val/11600.jpg')\n",
+    "# 1 head\n",
+    "# tmp = cv2.imread('../data/JapanHeads/val/11890.jpg')\n",
+    "images = transforms(tmp)[0].unsqueeze(0).to(device)\n",
+    "result = model(images)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'boxes': tensor([[266.5766, 247.8599, 291.5484, 299.7392],\n",
+       "        [278.4569, 298.0273, 299.7634, 321.4557],\n",
+       "        [236.5461, 298.2168, 272.0642, 325.3221],\n",
+       "        [185.3083, 103.5119, 212.0902, 161.9665],\n",
+       "        [122.0137, 181.0517, 394.9421, 309.6594],\n",
+       "        [-10.4037, -76.6183, 162.1928, 231.3325],\n",
+       "        [266.4202, 137.5987, 291.6492, 187.7287],\n",
+       "        [266.3672, 169.4090, 291.3798, 219.4443],\n",
+       "        [289.3322, 106.8751, 312.3366, 138.1237],\n",
+       "        [-72.8196, 151.5488, 229.2905, 306.9632],\n",
+       "        [126.6672,  33.5477, 387.3025, 269.7906],\n",
+       "        [ 99.2787,  90.8285, 415.7716, 199.5222],\n",
+       "        [ 54.3121,  -2.6096, 397.6073, 181.2968],\n",
+       "        [188.7678,  89.0289, 304.6007, 401.8643],\n",
+       "        [  7.3673,  86.1046, 149.3089, 382.9861],\n",
+       "        [147.4899, -68.0802, 302.1010, 227.7193]], device='cuda:0',\n",
+       "       grad_fn=<CatBackward>), 'labels': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], device='cuda:0'), 'scores': tensor([0.0257, 0.0158, 0.0136, 0.0125, 0.0123, 0.0123, 0.0120, 0.0120, 0.0116,\n",
+       "        0.0114, 0.0108, 0.0107, 0.0107, 0.0106, 0.0105, 0.0101],\n",
+       "       device='cuda:0', grad_fn=<CatBackward>)}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.77 ms ± 122 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# speed does not differ from 1 to 16 objects on image (I did not test >16)\n",
+    "%%timeit\n",
+    "one_inf_timeit(model, images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.49557522123894"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# FPS\n",
+    "1000/11.3"
    ]
   },
   {
